fixed issue with image overflow in section 1.

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ nav {
     align-items: center;
     background-color: #1f2937;
     padding: 10px 100px;
+    gap: 5px;
 }
 
 nav h3 {
@@ -37,6 +38,8 @@ nav ul {
     justify-content: space-between;
     padding: 80px 100px;
     gap: 20px;
+    flex-wrap: wrap;
+    /* width: fit-content; */
 }
 
 .s1-left {
@@ -44,6 +47,7 @@ nav ul {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    max-width: 60rem;
 }
 
 .s1-left h2 {
@@ -63,9 +67,8 @@ nav ul {
     align-items: center;
     justify-content: center;
     flex-shrink: 0;
-    flex-grow: 10;
-    max-width: 600px; 
-    min-width: 400px;
+    flex-grow: 2;
+    height: 10rem;   
 }
 
 .s1-left .sign-up {
@@ -83,6 +86,7 @@ nav ul {
     flex-direction: column;
     align-items: center;
     padding: 0 100px 24px 100px;
+    text-align: center;
 }
 
 .s2-container h2 {
